// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/001.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY e SYSTEM \\"001.ent\\">{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/002.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY e SYSTEM \\"002.ent\\">{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/003.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY e SYSTEM \\"003.ent\\">{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/004.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY e SYSTEM \\"004.ent\\">{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/005.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (e*)>{!r!}{!n!},20
characters,<,1
characters,!ELEMENT e EMPTY>{!r!}{!n!},19
characters,<,1
characters,!ENTITY e SYSTEM \\"005.ent\\">{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/006.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA|e)*>{!r!}{!n!},28
characters,<,1
characters,!ELEMENT e EMPTY>{!r!}{!n!},19
characters,<,1
characters,!ENTITY e SYSTEM \\"006.ent\\">{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/007.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY e SYSTEM \\"007.ent\\">{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
error,entity not found:&e;
characters,X&e;Z,5
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/008.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY e SYSTEM \\"008.ent\\">{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
error,entity not found:&e;
characters,X&e;Z,5
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/009.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY e SYSTEM \\"009.ent\\">{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/010.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY e SYSTEM \\"010.ent\\">{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/011.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY e PUBLIC \\"a not very interesting file\\" \\"011.ent\\">{!r!}{!n!}]>{!r!}{!n!},63
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/012.xml 1`] = `
"startDocument
startDTD,doc
endDTD
error,entity not found:&e2;
characters,!ENTITY e1 \\"&e2;\\">{!r!}{!n!},20
characters,<,1
error,entity not found:&e3;
characters,!ENTITY e2 \\"&e3;\\">{!r!}{!n!},20
characters,<,1
characters,!ENTITY e3 SYSTEM \\"012.ent\\">{!r!}{!n!},30
characters,<,1
error,entity not found:&e5;
characters,!ENTITY e4 \\"&e5;\\">{!r!}{!n!},20
characters,<,1
characters,!ENTITY e5 \\"(e5)\\">{!r!}{!n!},20
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
error,entity not found:&e1;
characters,&e1;,4
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/013.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (e)>{!r!}{!n!},19
characters,<,1
characters,!ELEMENT e (#PCDATA)>{!r!}{!n!},23
characters,<,1
characters,!ATTLIST e{!r!}{!n!}  a1 CDATA \\"a1 default\\"{!r!}{!n!}  a2 NMTOKENS \\"a2 default\\"{!r!}{!n!}>{!r!}{!n!},68
characters,<,1
characters,!ENTITY x SYSTEM \\"013.ent\\">{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
error,entity not found:&x;
characters,&x;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/ext-sa/014.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY e SYSTEM \\"014.ent\\">{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/001.xml 1`] = `
"startDocument
startDTD,doc,001.ent
endDTD
characters,!ELEMENT doc EMPTY>{!r!}{!n!}]>{!r!}{!n!},25
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/002.xml 1`] = `
"startDocument
startDTD,doc,002.ent
endDTD
characters,!ELEMENT doc EMPTY>{!r!}{!n!}]>{!r!}{!n!},25
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/003.xml 1`] = `
"startDocument
startDTD,doc,003-1.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/004.xml 1`] = `
"startDocument
startDTD,doc,004-1.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/005.xml 1`] = `
"startDocument
startDTD,doc,005-1.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/006.xml 1`] = `
"startDocument
startDTD,doc,006.ent
endDTD
characters,!ATTLIST doc a1 CDATA \\"v1\\">{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/007.xml 1`] = `
"startDocument
startDTD,doc,007.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/008.xml 1`] = `
"startDocument
startDTD,doc,whatever,008.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/009.xml 1`] = `
"startDocument
startDTD,doc,whatever,009.ent
endDTD
characters,!ATTLIST doc a2 CDATA \\"v2\\">{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/010.xml 1`] = `
"startDocument
startDTD,doc,010.ent
endDTD
characters,!ATTLIST doc a1 CDATA \\"v1\\">{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/011.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY % e SYSTEM \\"011.ent\\">{!r!}{!n!}%e;{!r!}{!n!}]>{!r!}{!n!},40
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/012.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY % e SYSTEM \\"012.ent\\">{!r!}{!n!}%e;{!r!}{!n!}]>{!r!}{!n!},40
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/013.xml 1`] = `
"startDocument
startDTD,doc,013.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/014.xml 1`] = `
"startDocument
startDTD,doc,014.ent
endDTD
characters,!ENTITY % e \\"INCLUDE\\">{!r!}{!n!}]>{!r!}{!n!},28
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/015.xml 1`] = `
"startDocument
startDTD,doc,015.ent
endDTD
characters,!ENTITY % e \\"IGNORE\\">{!r!}{!n!}]>{!r!}{!n!},27
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/016.xml 1`] = `
"startDocument
startDTD,doc,016.ent
endDTD
characters,!ENTITY % e \\"INCLUDE\\">{!r!}{!n!}]>{!r!}{!n!},28
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/017.xml 1`] = `
"startDocument
startDTD,doc,017.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/018.xml 1`] = `
"startDocument
startDTD,doc,018.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/019.xml 1`] = `
"startDocument
startDTD,doc,019.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/020.xml 1`] = `
"startDocument
startDTD,doc,020.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/021.xml 1`] = `
"startDocument
startDTD,doc,021.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/022.xml 1`] = `
"startDocument
startDTD,doc,022.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/023.xml 1`] = `
"startDocument
startDTD,doc,023.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/024.xml 1`] = `
"startDocument
startDTD,doc,024.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/025.xml 1`] = `
"startDocument
startDTD,doc,025.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/026.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc ANY>{!r!}{!n!},19
characters,<,1
characters,!ENTITY % e SYSTEM \\"026.ent\\">{!r!}{!n!}%e;{!r!}{!n!},36
characters,<,1
characters,!ATTLIST doc a1 CDATA \\"x1\\" a2 CDATA \\"x2\\">{!r!}{!n!}]>{!r!}{!n!},47
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/027.xml 1`] = `
"startDocument
startDTD,doc,027.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/028.xml 1`] = `
"startDocument
startDTD,doc,028.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/029.xml 1`] = `
"startDocument
startDTD,doc,029.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/030.xml 1`] = `
"startDocument
startDTD,doc,030.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/not-sa/031.xml 1`] = `
"startDocument
startDTD,doc,031-1.ent
endDTD
characters,{!r!}{!n!},2
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/001.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/002.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/003.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/004.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},37
startElement,doc,{'a1':'v1'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/005.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},37
startElement,doc,{'a1':'v1'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/006.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},37
startElement,doc,{'a1':'v1'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/007.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
characters, ,5
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/008.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
error,entity not found:&amp;
error,entity not found:&lt;
error,entity not found:&gt;
error,entity not found:&quot;
error,entity not found:&apos;
characters,&amp;&lt;&gt;&quot;&apos;,25
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/009.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
characters, ,6
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/010.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},37
startElement,doc,{'a1':'v1'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/011.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA #IMPLIED a2 CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},55
startElement,doc,{'a1':'v1','a2':'v2'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/012.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc : CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},36
error,element parse error: Error: invalid attribute::
characters,<,1
characters,doc :=\\"v1\\">,11
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/013.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc _.-0123456789 CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},48
startElement,doc,{'_.-0123456789':'v1'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/014.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc abcdefghijklmnopqrstuvwxyz CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},61
startElement,doc,{'abcdefghijklmnopqrstuvwxyz':'v1'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/015.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc ABCDEFGHIJKLMNOPQRSTUVWXYZ CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},61
startElement,doc,{'ABCDEFGHIJKLMNOPQRSTUVWXYZ':'v1'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/016.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
processingInstruction,pi
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/017.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
processingInstruction,pi,some data ? > <?
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/018.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
startCDATA
characters,<!DOCTYPE doc [{!r!}{!n!}<!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!}<doc><![CDATA[<foo>]]></doc>{!r!}{!n!},61,5
endCDATA
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/019.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
startCDATA
characters,<!DOCTYPE doc [{!r!}{!n!}<!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!}<doc><![CDATA[<&]]></doc>{!r!}{!n!},61,2
endCDATA
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/020.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
startCDATA
characters,<!DOCTYPE doc [{!r!}{!n!}<!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!}<doc><![CDATA[<&]>]]]></doc>{!r!}{!n!},61,5
endCDATA
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/021.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
comment,<!DOCTYPE doc [{!r!}{!n!}<!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!}<doc><!-- a comment --></doc>{!r!}{!n!},56,11
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/022.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
comment,<!DOCTYPE doc [{!r!}{!n!}<!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!}<doc><!-- a comment ->--></doc>{!r!}{!n!},56,13
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/023.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY e \\"\\">{!r!}{!n!}]>{!r!}{!n!},19
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/024.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (foo)>{!r!}{!n!},21
characters,<,1
characters,!ELEMENT foo (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY e \\"<foo>,20
characters,\\">{!r!}{!n!}]>{!r!}{!n!},8
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/025.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (foo*)>{!r!}{!n!},22
characters,<,1
characters,!ELEMENT foo (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
startElement,foo
endElement,foo
startElement,foo
endElement,foo
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/026.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (foo*)>{!r!}{!n!},22
characters,<,1
characters,!ELEMENT foo EMPTY>{!r!}{!n!}]>{!r!}{!n!},25
startElement,doc
startElement,foo
endElement,foo
startElement,foo
endElement,foo
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/027.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (foo*)>{!r!}{!n!},22
characters,<,1
characters,!ELEMENT foo ANY>{!r!}{!n!}]>{!r!}{!n!},23
startElement,doc
startElement,foo
endElement,foo
startElement,foo
endElement,foo
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/028.xml 1`] = `
"startDocument
processingInstruction,xml,version=\\"1.0\\"
characters,{!r!}{!n!},2
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/029.xml 1`] = `
"startDocument
processingInstruction,xml,version='1.0'
characters,{!r!}{!n!},2
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/030.xml 1`] = `
"startDocument
processingInstruction,xml,version = \\"1.0\\"
characters,{!r!}{!n!},2
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/031.xml 1`] = `
"startDocument
processingInstruction,xml,version='1.0' encoding=\\"UTF-8\\"
characters,{!r!}{!n!},2
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/032.xml 1`] = `
"startDocument
processingInstruction,xml,version='1.0' standalone='yes'
characters,{!r!}{!n!},2
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/033.xml 1`] = `
"startDocument
processingInstruction,xml,version='1.0' encoding=\\"UTF-8\\" standalone='yes'
characters,{!r!}{!n!},2
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/034.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/035.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/036.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
characters,{!r!}{!n!},2
processingInstruction,pi,data
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/037.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
characters,{!r!}{!n!},2
comment,<!DOCTYPE doc [{!r!}{!n!}<!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!}<doc></doc>{!r!}{!n!}<!-- comment -->{!r!}{!n!}{!r!}{!n!},64,9
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/038.xml 1`] = `
"startDocument
comment,<!-- comment -->{!r!}{!n!}<!DOCTYPE doc [{!r!}{!n!}<!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!}<doc></doc>{!r!}{!n!}{!r!}{!n!},4,9
characters,{!r!}{!n!},2
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/039.xml 1`] = `
"startDocument
processingInstruction,pi,data
characters,{!r!}{!n!},2
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/040.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},37
error,entity not found:&quot;
error,entity not found:&lt;
error,entity not found:&amp;
error,entity not found:&gt;
error,entity not found:&apos;
startElement,doc,{'a1':'&quot;&lt;&amp;&gt;&apos;'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/041.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},37
startElement,doc,{'a1':'A'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/042.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
characters,A,38
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/043.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ATTLIST doc a1 CDATA #IMPLIED>{!r!}{!n!},33
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc,{'a1':'foo{!r!}{!n!}bar'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/044.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (e*)>{!r!}{!n!},20
characters,<,1
characters,!ELEMENT e EMPTY>{!r!}{!n!},19
characters,<,1
characters,!ATTLIST e a1 CDATA \\"v1\\" a2 CDATA \\"v2\\" a3 CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},63
startElement,doc
characters,{!r!}{!n!},2
startElement,e,{'a3':'v3'}
endElement,e
characters,{!r!}{!n!},2
startElement,e,{'a1':'w1'}
endElement,e
characters,{!r!}{!n!},2
startElement,e,{'a2':'w2','a3':'v3'}
endElement,e
characters,{!r!}{!n!},2
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/045.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA \\"v1\\">{!r!}{!n!},29
characters,<,1
characters,!ATTLIST doc a1 CDATA \\"z1\\">{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/046.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA \\"v1\\">{!r!}{!n!},29
characters,<,1
characters,!ATTLIST doc a2 CDATA \\"v2\\">{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/047.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
characters,X{!r!}{!n!}Y,4
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/048.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
characters,],1
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/049.xml 1`] = `
"startDocument
characters,��,2
error,element parse error: Error: invalid tagName:
characters,<,1
characters,{!0!}!{!0!}D{!0!}O{!0!}C{!0!}T{!0!}Y{!0!}P{!0!}E{!0!} {!0!}d{!0!}o{!0!}c{!0!} {!0!}[{!0!}{!r!}{!0!}{!n!}{!0!},33
error,element parse error: Error: invalid tagName:
characters,<,1
characters,{!0!}!{!0!}E{!0!}L{!0!}E{!0!}M{!0!}E{!0!}N{!0!}T{!0!} {!0!}d{!0!}o{!0!}c{!0!} {!0!}({!0!}#{!0!}P{!0!}C{!0!}D{!0!}A{!0!}T{!0!}A{!0!}){!0!}>{!0!}{!r!}{!0!}{!n!}{!0!}]{!0!}>{!0!}{!r!}{!0!}{!n!}{!0!},59
error,element parse error: Error: invalid tagName:
characters,<,1
characters,{!0!}d{!0!}o{!0!}c{!0!}>{!0!}�{!0!},11
error,element parse error: Error: invalid tagName:
characters,<,1
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/050.xml 1`] = `
"startDocument
characters,��,2
error,element parse error: Error: invalid tagName:
characters,<,1
characters,{!0!}!{!0!}D{!0!}O{!0!}C{!0!}T{!0!}Y{!0!}P{!0!}E{!0!} {!0!}d{!0!}o{!0!}c{!0!} {!0!}[{!0!}{!r!}{!0!}{!n!}{!0!},33
error,element parse error: Error: invalid tagName:
characters,<,1
characters,{!0!}!{!0!}E{!0!}L{!0!}E{!0!}M{!0!}E{!0!}N{!0!}T{!0!} {!0!}d{!0!}o{!0!}c{!0!} {!0!}({!0!}#{!0!}P{!0!}C{!0!}D{!0!}A{!0!}T{!0!}A{!0!}){!0!}>{!0!}{!r!}{!0!}{!n!}{!0!}]{!0!}>{!0!}{!r!}{!0!}{!n!}{!0!},59
error,element parse error: Error: invalid tagName:
characters,<,1
characters,{!0!}d{!0!}o{!0!}c{!0!}>{!0!}@!*L,19
error,element parse error: Error: invalid tagName:
characters,<,1
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/051.xml 1`] = `
"startDocument
characters,��,2
error,element parse error: Error: invalid tagName:
characters,<,1
characters,{!0!}!{!0!}D{!0!}O{!0!}C{!0!}T{!0!}Y{!0!}P{!0!}E{!0!} {!0!}@!*L {!0!}[{!0!}{!r!}{!0!}{!n!}{!0!},37
error,element parse error: Error: invalid tagName:
characters,<,1
characters,{!0!}!{!0!}E{!0!}L{!0!}E{!0!}M{!0!}E{!0!}N{!0!}T{!0!} {!0!}@!*L {!0!} {!0!}({!0!}#{!0!}P{!0!}C{!0!}D{!0!}A{!0!}T{!0!}A{!0!}){!0!}>{!0!}{!r!}{!0!}{!n!}{!0!}]{!0!}>{!0!}{!r!}{!0!}{!n!}{!0!},65
error,element parse error: Error: invalid tagName:
characters,<,1
characters,{!0!}@!*L>{!0!},13
error,element parse error: Error: invalid tagName:
characters,<,1
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/052.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
characters,𐀀􏿽,4
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/053.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY e \\",11
startElement,e
endElement,e
characters,\\">{!r!}{!n!},4
characters,<,1
characters,!ELEMENT doc (e)>{!r!}{!n!},19
characters,<,1
characters,!ELEMENT e EMPTY>{!r!}{!n!}]>{!r!}{!n!},23
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/054.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!}{!r!}{!n!}{!r!}{!n!},33
startElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/055.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
processingInstruction,pi,data
characters,{!r!}{!n!},2
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/056.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
characters,A,44
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/057.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (a*)>{!r!}{!n!}]>{!r!}{!n!},24
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/058.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ATTLIST doc a1 NMTOKENS #IMPLIED>{!r!}{!n!},36
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc,{'a1':' 1  {!t!}2 {!t!}'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/059.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (e*)>{!r!}{!n!},20
characters,<,1
characters,!ELEMENT e EMPTY>{!r!}{!n!},19
characters,<,1
characters,!ATTLIST e a1 CDATA #IMPLIED a2 CDATA #IMPLIED a3 CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},71
startElement,doc
characters,{!r!}{!n!},2
startElement,e,{'a1':'v1','a2':'v2','a3':'v3'}
endElement,e
characters,{!r!}{!n!},2
startElement,e,{'a1':'w1','a2':'v2'}
endElement,e
characters,{!r!}{!n!},2
startElement,e,{'a1':'v1','a2':'w2','a3':'v3'}
endElement,e
characters,{!r!}{!n!},2
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/060.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
characters,X{!n!}Y,7
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/061.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
characters,£,6
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/062.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
characters,เจมส์,23
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/063.xml 1`] = `
"startDocument
startDTD,เจมส์
endDTD
characters,!ELEMENT เจมส์ (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},31
startElement,เจมส์
endElement,เจมส์
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/064.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
characters,𐀀􏿽,19
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/065.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY e \\"<\\">{!r!}{!n!},20
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/066.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA #IMPLIED>{!r!}{!n!},33
comment,<!DOCTYPE doc [{!r!}{!n!}<!ELEMENT doc (#PCDATA)>{!r!}{!n!}<!ATTLIST doc a1 CDATA #IMPLIED>{!r!}{!n!}<!-- 34 is double quote -->{!r!}{!n!}<!ENTITY e1 \\"&#34;\\">{!r!}{!n!}]>{!r!}{!n!}<doc a1=\\"&e1;\\"></doc>{!r!}{!n!},81,20
characters,{!r!}{!n!},2
characters,<,1
characters,!ENTITY e1 \\"\\"\\">{!r!}{!n!}]>{!r!}{!n!},25
error,entity not found:&e1;
startElement,doc,{'a1':'&e1;'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/067.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
characters,{!r!},5
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/068.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY e \\"{!r!}\\">{!r!}{!n!}]>{!r!}{!n!},24
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/069.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!NOTATION n PUBLIC \\"whatever\\">{!r!}{!n!}]>{!r!}{!n!},36
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/070.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY % e \\",13
characters,<,1
characters,!ELEMENT doc (#PCDATA)>\\">{!r!}{!n!}%e;{!r!}{!n!}]>{!r!}{!n!},36
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/071.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a ID #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/072.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a IDREF #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},36
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/073.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a IDREFS #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},37
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/074.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a ENTITY #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},37
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/075.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a ENTITIES #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},39
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/076.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a NOTATION (n1|n2) #IMPLIED>{!r!}{!n!},43
characters,<,1
characters,!NOTATION n1 SYSTEM \\"http://www.w3.org/\\">{!r!}{!n!},43
characters,<,1
characters,!NOTATION n2 SYSTEM \\"http://www.w3.org/\\">{!r!}{!n!}]>{!r!}{!n!},47
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/077.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a (1|2) #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},36
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/078.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a CDATA #REQUIRED>{!r!}{!n!}]>{!r!}{!n!},37
startElement,doc,{'a':'v'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/079.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a CDATA #FIXED \\"v\\">{!r!}{!n!}]>{!r!}{!n!},38
startElement,doc,{'a':'v'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/080.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a CDATA #FIXED \\"v\\">{!r!}{!n!}]>{!r!}{!n!},38
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/081.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (a, b, c)>{!r!}{!n!},25
characters,<,1
characters,!ELEMENT a (a?)>{!r!}{!n!},18
characters,<,1
characters,!ELEMENT b (b*)>{!r!}{!n!},18
characters,<,1
characters,!ELEMENT c (a | b)+>{!r!}{!n!}]>{!r!}{!n!},26
startElement,doc
startElement,a
endElement,a
startElement,b
endElement,b
startElement,c
startElement,a
endElement,a
endElement,c
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/082.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY % e SYSTEM \\"e.dtd\\">{!r!}{!n!},29
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/083.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY % e PUBLIC 'whatever' \\"e.dtd\\">{!r!}{!n!},40
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/084.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>]>,25
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/085.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY % e \\",13
warning,unclosed xml attribute
startElement,foo
endElement,foo
characters,\\">{!r!}{!n!},4
characters,<,1
characters,!ENTITY e \\"\\">{!r!}{!n!}]>{!r!}{!n!},19
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/086.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY e \\"\\">{!r!}{!n!},15
characters,<,1
characters,!ENTITY e \\",11
warning,unclosed xml attribute
startElement,foo
endElement,foo
characters,\\">{!r!}{!n!}]>{!r!}{!n!},8
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/087.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY e \\",11
error,element parse error: Error: elements closed character '/' and '>' must be connected to
characters,<,1
characters,foo/>\\">{!r!}{!n!},13
characters,<,1
characters,!ELEMENT doc (foo)>{!r!}{!n!},21
characters,<,1
characters,!ELEMENT foo EMPTY>{!r!}{!n!}]>{!r!}{!n!},25
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/088.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
error,entity not found:&lt;
characters,!ENTITY e \\"&lt;foo>\\">{!r!}{!n!}]>{!r!}{!n!},27
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/089.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY e \\"𐀀􏿽􏿿\\">{!r!}{!n!},44
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/090.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ATTLIST e a NOTATION (n) #IMPLIED>{!r!}{!n!},37
characters,<,1
characters,!ELEMENT doc (e)*>{!r!}{!n!},20
characters,<,1
characters,!ELEMENT e (#PCDATA)>{!r!}{!n!},23
characters,<,1
characters,!NOTATION n PUBLIC \\"whatever\\">{!r!}{!n!}]>{!r!}{!n!},36
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/091.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!NOTATION n SYSTEM \\"http://www.w3.org/\\">{!r!}{!n!},42
characters,<,1
characters,!ENTITY e SYSTEM \\"http://www.w3.org/\\" NDATA n>{!r!}{!n!},48
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a ENTITY \\"e\\">{!r!}{!n!}]>{!r!}{!n!},32
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/092.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (a)*>{!r!}{!n!},20
characters,<,1
characters,!ELEMENT a EMPTY>{!r!}{!n!}]>{!r!}{!n!},23
startElement,doc
characters,{!r!}{!n!},2
startElement,a
endElement,a
characters,{!r!}{!n!}    ,6
startElement,a
endElement,a
characters,{!t!},1
startElement,a
endElement,a
characters,{!r!}{!n!}{!r!}{!n!}{!r!}{!n!},6
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/093.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!n!}]>{!n!},27
startElement,doc
characters,{!r!}{!n!}{!r!}{!r!},4
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/094.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY % e \\"foo\\">{!r!}{!n!},20
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a1 CDATA \\"%e;\\">{!r!}{!n!}]>{!r!}{!n!},34
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/095.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ATTLIST doc a1 CDATA #IMPLIED>{!r!}{!n!},33
characters,<,1
characters,!ATTLIST doc a1 NMTOKENS #IMPLIED>{!r!}{!n!},36
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc,{'a1':'1  2'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/096.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ATTLIST doc a1 NMTOKENS \\" 1  {!t!}2 {!t!}\\">{!r!}{!n!},38
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/097.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY % e SYSTEM \\"097.ent\\">{!r!}{!n!},31
characters,<,1
characters,!ATTLIST doc a1 CDATA \\"v1\\">{!r!}{!n!}%e;{!r!}{!n!},34
characters,<,1
characters,!ATTLIST doc a2 CDATA \\"v2\\">{!r!}{!n!}]>{!r!}{!n!},33
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/098.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
processingInstruction,pi,x{!r!}{!n!}y
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/099.xml 1`] = `
"startDocument
processingInstruction,xml,version=\\"1.0\\" encoding=\\"utf-8\\"
characters,{!r!}{!n!},2
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/100.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ENTITY e PUBLIC \\";!*#@$_%\\" \\"100.xml\\">{!r!}{!n!},40
characters,<,1
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/101.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY e \\"\\"\\">{!r!}{!n!}]>{!r!}{!n!},24
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/102.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},36
startElement,doc,{'a':'\\"'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/103.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
characters,<doc>,9
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/104.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},36
startElement,doc,{'a':'x{!t!}y'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/105.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},36
startElement,doc,{'a':'x{!t!}y'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/106.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},36
startElement,doc,{'a':'x{!n!}y'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/107.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},36
startElement,doc,{'a':'x{!r!}y'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/108.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY e \\"{!r!}{!n!}\\">{!r!}{!n!},17
characters,<,1
characters,!ATTLIST doc a CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},36
error,entity not found:&e;
startElement,doc,{'a':'x&e;y'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/109.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},36
startElement,doc,{'a':''}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/110.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY e \\"{!r!}{!n!}\\">{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},36
error,entity not found:&e;
startElement,doc,{'a':'x&e;y'}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/111.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST doc a NMTOKENS #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},39
startElement,doc,{'a':' x  y '}
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/112.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (a | b)>{!r!}{!n!},23
characters,<,1
characters,!ELEMENT a (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},27
startElement,doc
startElement,a
endElement,a
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/113.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ATTLIST e a CDATA #IMPLIED>{!r!}{!n!}]>{!r!}{!n!},34
startElement,doc
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/114.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY e \\",11
startCDATA
characters,<!DOCTYPE doc [{!r!}{!n!}<!ELEMENT doc (#PCDATA)>{!r!}{!n!}<!ENTITY e \\"<![CDATA[&foo;]]>\\">{!r!}{!n!}]>{!r!}{!n!}<doc>&e;</doc>{!r!}{!n!},64,5
endCDATA
characters,\\">{!r!}{!n!}]>{!r!}{!n!},8
startElement,doc
error,entity not found:&e;
characters,&e;,3
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/115.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
error,entity not found:&e2;
characters,!ENTITY e1 \\"&e2;\\">{!r!}{!n!},20
characters,<,1
characters,!ENTITY e2 \\"v\\">{!r!}{!n!}]>{!r!}{!n!},21
startElement,doc
error,entity not found:&e1;
characters,&e1;,4
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/116.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!},29
startElement,doc
startCDATA
characters,<!DOCTYPE doc [{!r!}{!n!}<!ELEMENT doc (#PCDATA)>{!r!}{!n!}]>{!r!}{!n!}<doc><![CDATA[{!r!}{!n!}]]></doc>{!r!}{!n!},61,2
endCDATA
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/117.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY rsqb \\"]\\">{!r!}{!n!}]>{!r!}{!n!},23
startElement,doc
error,entity not found:&rsqb;
characters,&rsqb;,6
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/118.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc (#PCDATA)>{!r!}{!n!},25
characters,<,1
characters,!ENTITY rsqb \\"]]\\">{!r!}{!n!}]>{!r!}{!n!},24
startElement,doc
error,entity not found:&rsqb;
characters,&rsqb;,6
endElement,doc
endDocument"
`;

exports[`xmltest/valid sax should parse xmltest/valid/sa/119.xml 1`] = `
"startDocument
startDTD,doc
endDTD
characters,!ELEMENT doc ANY>{!r!}{!n!}]>{!r!}{!n!},23
startElement,doc
comment,<!DOCTYPE doc [{!r!}{!n!}<!ELEMENT doc ANY>{!r!}{!n!}]>{!r!}{!n!}<doc><!-- -á --></doc>{!r!}{!n!},50,4
endElement,doc
endDocument"
`;
